kubernetes/lanyard.yaml
apiVersion: v1

kind: Namespace

metadata:

  name: lanyard

---

apiVersion: apps/v1

kind: Deployment

metadata:

  name: lanyard

  namespace: lanyard

spec:

  replicas: 1



  selector:

    matchLabels:

      app: lanyard



  template:

    metadata:

      labels:

        app: lanyard



    spec:

      containers:

        - name: lanyard

          image: localhost/lanyard:cc153d792436

          imagePullPolicy: Never



          ports:

            - name: http

              containerPort: 8943



          readinessProbe:

            httpGet:

              path: /

              port: http

            initialDelaySeconds: 5

            periodSeconds: 5



          livenessProbe:

            httpGet:

              path: /

              port: http

            initialDelaySeconds: 20

            periodSeconds: 15



          resources:

            requests:

              cpu: 25m

              memory: 64Mi

            limits:

              cpu: "1"

              memory: 512Mi

---

apiVersion: v1

kind: Service

metadata:

  name: lanyard

  namespace: lanyard

spec:

  selector:

    app: lanyard



  ports:

    - name: http

      port: 80

      targetPort: 8943



  type: ClusterIP

---

apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: lanyard

  namespace: lanyard

spec:

  ingressClassName: traefik



  rules:

    - host: lanyard.cafe

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: lanyard

                port:

                  number: 80



    - host: www.lanyard.cafe

      http:

        paths:

          - path: /

            pathType: Prefix

            backend:

              service:

                name: lanyard

                port:

                  number: 80
